// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Checkbox (snapshot) renders checked state via defaultChecked 1`] = `
<button
  aria-checked="true"
  class="peer h-4 w-4 shrink-0 rounded-sm border border-primary ring-offset-background focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50 data-[state=checked]:bg-primary data-[state=checked]:text-primary-foreground"
  data-state="checked"
  role="checkbox"
  type="button"
  value="on"
>
  <span
    class="flex items-center justify-center text-current"
    data-state="checked"
    style="pointer-events: none;"
  >
    <svg
      class="lucide lucide-check size-4"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M20 6 9 17l-5-5"
      />
    </svg>
  </span>
</button>
`;

exports[`Checkbox (snapshot) renders disabled state 1`] = `
<button
  aria-checked="false"
  class="peer h-4 w-4 shrink-0 rounded-sm border border-primary ring-offset-background focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50 data-[state=checked]:bg-primary data-[state=checked]:text-primary-foreground"
  data-disabled=""
  data-state="unchecked"
  disabled=""
  role="checkbox"
  type="button"
  value="on"
/>
`;

exports[`Checkbox (snapshot) renders unchecked state (default) 1`] = `
<button
  aria-checked="false"
  class="peer h-4 w-4 shrink-0 rounded-sm border border-primary ring-offset-background focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50 data-[state=checked]:bg-primary data-[state=checked]:text-primary-foreground"
  data-state="unchecked"
  role="checkbox"
  type="button"
  value="on"
/>
`;
